- P4A_Table movements now won't move the data source pointer
- P4A_Table movements are now ajax triggered
- a loader spinner was added
- ie7 javascript library was dropped and some ie fixes were introduced
- P4A_AJAX_DEBUG constant was added (creates p4a_ajax_debug.txt file under session.save_path directory)
- P4A_AJAX_ENABLED constant was added (automatically disabled on handhelds)
- some minor bugfixes and beautifications

1.0.0
- P4A_Frame, P4A_Canvas and P4A_Sheet now checks if object were destroyed before rendering
- a bug in P4A_Number::format was fixed (it prevented setNewValue(0) to work)
- some code beautification were done

0.99.12
- Persian translation was added (thanks to JraNil)
- Catalan translation was added (thanks to Alvaro Gilabert)
- PEAR::Calendar 0.5.3 was added to libraries
- PEAR::Date 1.4.6 was added to libraries

0.99.11
- now is possible to do P4A_Widget::useTemplate('dir/file')
- P4A_Toolbar::addLabel() method was added
- a bug on P4A_Date::get_month_name() was fixed
- a bug on P4A_Table was fixed
- a bug with framework-wide libraries was fixed
- P4A_Frame can now handle if an anchored object was destroyed
- P4A_Toolbar(s) constructor was splitted to allow better customization
- some minor beautifications were done

0.99.10
- P4A_Array_Source::load() now can be called more than one time to change the data inside the array_source
- TinyFCK was updated to 0.12
- a bug about invisible labels for read-only P4A_Field was solved
- a bug with P4A_I18N_Messages::get() was solved
- Slovenian translation was added (thanks to Jernej Zorec)

0.99.9
- P4A_Data_Source, P4A_DB_Source and P4A_Array_Source now trigger beforeMoveRow, onMoveRow and afterMoveRow events
- P4A_Mask's beforeMoveRow, onMoveRow and afterMoveRow triggers are declared as "deprecated" and will be removed in 1.2
- some minor beautifications

0.99.8
- a bugfix about P4A_Date::unformat was fixed (1468679 - string padding)
- Polish translation was updated